syntax = "proto3";

package snapshot2;

option go_package = "github.com/rqlite/rqlite/v9/snapshot2/proto";

message SnapshotDBFile {
  uint64 size_bytes = 1;
  uint32 crc32 = 2;
}

message SnapshotWALFile {
  uint64 size_bytes = 1;
  uint32 crc32 = 2;
}

message SnapshotInstall {
  SnapshotDBFile db_file = 1;
  repeated SnapshotWALFile wal_files = 2;
}

message SnapshotManifest {
  uint32 format_version = 1;

  oneof type {
    SnapshotDBFile db_path = 2;
    SnapshotWALFile wal_path = 3;
    SnapshotInstall install = 4;
  }
}
